# internal/api/openapi.yaml
@@ -2274,6 +2274,30 @@ paths:
       summary: Log in
       tags:
       - auth
+  /auth/refresh:
+    post:
+      description: Issues a new JWT from an existing token (valid or expired within
+        7 days)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.authResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.errorResponse'
+      security:
+      - BearerAuth: []
+      summary: Refresh JWT token
+      tags:
+      - auth
   /auth/setup:
     post:
       consumes:
